# GRID-playground-uchicago2026

./: pyproject.toml
uchicago_notebooks/: hello_grid_car.ipynb
