[project]
name = "grid-playground-uchicago2026"
version = "0.1.0"
description = "Sample notebooks and configurations for the GRID robotics platform to be used for the UChicago data science program"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "airgen"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
